--- a/contents/power-of-es6-arrow-functions.mdx
+++ b/contents/power-of-es6-arrow-functions.mdx
@@ -76,4 +76,6 @@ setTimeout(() => {
 
 ES6 arrow functions are a powerful tool in modern JavaScript, providing a concise and expressive syntax for writing functions. They are especially useful for short, non-method functions, and they simplify the handling of `this` context. By using arrow functions judiciously, you can make your codebase cleaner and more readable.
 
-Remember to experiment and explore the full potential of arrow functions in your projects. Happy coding!
+Remember to experiment and explore the full potential of arrow functions in your projects.
+
+**Happy coding!**
