--- a/contents/resource-hub.mdx
+++ b/contents/resource-hub.mdx
@@ -41,11 +41,11 @@ ResourceHub keeps users informed about updates, new releases, and activity relat
 
 ResourceHub finds applications across various domains and disciplines, including but not limited to:
 
-- Software Development: Discover and contribute to open-source projects, libraries, and frameworks.
-- Design and Creativity: Find design assets, templates, and tools for graphic design, UX/UI design, and creative projects.
-- Education and Learning: Access tutorials, learning resources, and educational materials for self-paced learning.
-- Research and Academia: Explore research papers, academic resources, and scientific tools.
-- Entrepreneurship: Discover startup resources, business templates, and guidance for launching and scaling ventures.
+-   Software Development: Discover and contribute to open-source projects, libraries, and frameworks.
+-   Design and Creativity: Find design assets, templates, and tools for graphic design, UX/UI design, and creative projects.
+-   Education and Learning: Access tutorials, learning resources, and educational materials for self-paced learning.
+-   Research and Academia: Explore research papers, academic resources, and scientific tools.
+-   Entrepreneurship: Discover startup resources, business templates, and guidance for launching and scaling ventures.
 
 ## Use Cases
 
@@ -66,3 +66,5 @@ ResourceHub offers a versatile platform for individuals from different backgroun
 ---
 
 This MDX file provides an overview of the features, applications, and use cases for the "ResourceHub: Discover and Share Creative Projects" platform. You can use this as a starting point to expand upon the details and customize the content according to your specific project requirements.
+
+**Happy coding!**
