--- a/contents/spread-operator.mdx
+++ b/contents/spread-operator.mdx
@@ -79,3 +79,5 @@ The spread operator was introduced in ES6, and as of 2021, it is widely supporte
 The spread operator is a versatile feature in JavaScript that simplifies working with arrays and objects. By providing a concise syntax for copying, merging, and spreading elements, it saves developers time and results in more readable code. As browser support for ES6 continues to improve, the spread operator becomes a powerful tool for modern JavaScript development.
 
 Keep spreading the power of the spread operator in your projects!
+
+**Happy coding!**
