--- a/contents/tailwind-inputs.mdx
+++ b/contents/tailwind-inputs.mdx
@@ -51,3 +51,5 @@ Conclusion
 @k8pai/tailwind-inputs is a fantastic npm package that extends Tailwind CSS with a comprehensive set of input components. By leveraging this package, you can enhance your web forms and streamline user interactions in your projects. Whether you're building a simple contact form or a complex data entry system, @k8pai/tailwind-inputs provides the necessary tools to create intuitive and visually appealing input elements.
 
 Give [@k8pai/tailwind-inputs](https://www.npmjs.com/package/@k8pai/tailwind-inputs) a try and experience the convenience of ready-made input components powered by Tailwind CSS!
+
+**Happy coding!**
