--- a/contents/this-keyword.mdx
+++ b/contents/this-keyword.mdx
@@ -9,10 +9,10 @@ date: 2023-06-02
 
 The value of 'this' is determined dynamically based on how a function is called. It can have different values depending on the invocation context:
 
-- When a function is called as a method of an object, 'this' refers to the object itself.
-- When a function is called as a standalone function, 'this' refers to the global object (usually the 'window' object in a browser environment).
-- When a function is called with the 'new' keyword as a constructor, 'this' refers to the newly created instance.
-- When a function is called using the 'call', 'apply', or 'bind' methods, 'this' can be explicitly set to any desired object.
+-   When a function is called as a method of an object, 'this' refers to the object itself.
+-   When a function is called as a standalone function, 'this' refers to the global object (usually the 'window' object in a browser environment).
+-   When a function is called with the 'new' keyword as a constructor, 'this' refers to the newly created instance.
+-   When a function is called using the 'call', 'apply', or 'bind' methods, 'this' can be explicitly set to any desired object.
 
 ### Examples
 
@@ -65,3 +65,5 @@ greet.call(person); // Output: Hello, Alice!
 Understanding the context and value of 'this' is crucial for properly accessing and manipulating object properties and achieving the desired behavior in JavaScript applications.
 
 For more in-depth information, you can refer to the [MDN Web Docs on 'this'](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/this).
+
+**Happy coding!**
