Modified contentlayer config and renamed solutions to notes

--- a/contents/120-mindblowing-AI-tools.mdx
+++ b/contents/120-mindblowing-AI-tools.mdx
@@ -1,4 +1,5 @@
 ---
+header: 'AI Tools'
 title: '120 Mind-Blowing AI Tools and Websites'
 summary: 'Explore 120 mind-blowing AI tools and websites across various categories such as designing, productivity, chatbot, writing, video, marketing, and more.'
 date: 2023-07-30
