--- a/contents/prototypal-inheritance-made-simple.mdx
+++ b/contents/prototypal-inheritance-made-simple.mdx
@@ -1,4 +1,5 @@
 ---
+header: 'Prototypal Inheritance'
 title: 'ES6 Classes: Prototypal Inheritance Made Simple'
 summary: 'Learn about ES6 classes, their role in simplifying prototype-based inheritance, and how they provide a more structured approach to working with objects in JavaScript.'
 date: '2023-08-01'
