--- a/contents/deconstructing-objects.mdx
+++ b/contents/deconstructing-objects.mdx
@@ -1,5 +1,5 @@
 ---
-heading: Deconstructing Objects
+header: Deconstructing Objects
 title: Deconstructing Objects Made Simple
 date: 2023-07-23
 ---
