--- a/contents/functional-programming-paradigm-in-es6.mdx
+++ b/contents/functional-programming-paradigm-in-es6.mdx
@@ -2,7 +2,7 @@
 header: 'Functional Programming'
 title: 'Functional Programming Paradigm in ES6'
 summary: 'Explore the functional programming paradigm in JavaScript using ES6 features like map, filter, reduce, and immutability to write cleaner, more concise, and maintainable code.'
-date: '2023-08-01'
+date: 2023-08-01
 ---
 
 # Functional Programming Paradigm in ES6
